<resources>
    <string name="app_name">ETSIIT</string>
    <string name="horario_menu">Horario</string>
    <string name="home_menu">Home</string>
    <string name="biblioteca_menu">Biblioteca</string>
    <string name="asistencia_menu">Asistencia</string>
    <string name="menu_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="my_header_title">
        <item></item>
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miercoles</item>
        <item>Jueves</item>
        <item>Viernes</item>
    </string-array>
    <!-- Strings para la parte de los contactos -->
    <string name="contact_form">Enviar correo rápido</string>
    <string name="contact_form_name">Tu nombre</string>
    <string name="contact_form_email">Email del destinatario</string>
    <string name="contact_form_subject">Asunto</string>
    <string name="contact_form_message">Contenido del mensaje</string>
    <string name="contact_form_button">Enviar mensaje</string>
    <string name="contact_form_post_message">Enviando mensaje...</string>
    <string name="contact_posted">Tu mensaje ha sido correctamente enciado</string>
</resources>