<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".contactosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_name"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/your_name"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.8"
                android:gravity="center"
                android:inputType="text"
                android:paddingLeft="2dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/microNombre"
                android:scaleX="2"
                android:scaleY="2"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:src="@drawable/ic_mic_black_off" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_email"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/your_email"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.8"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/microEmail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleX="2"
                android:scaleY="2"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:src="@drawable/ic_mic_black_off" />


        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_subject"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/your_subject"
                android:layout_width="fill_parent"
                android:layout_height="38dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.8"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/microAsunto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scaleX="2"
                android:scaleY="2"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:src="@drawable/ic_mic_black_off" />

        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:paddingLeft="3dp"
            android:text="@string/contact_form_message"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/your_message"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0.8"
                android:height="180dp"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/microContenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="2"
                android:scaleY="2"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.2"
                android:src="@drawable/ic_mic_black_off" />

        </LinearLayout>

        <Button
            android:id="@+id/post_message"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@color/black"
            android:paddingLeft="15dp"
            android:paddingTop="1dp"
            android:paddingRight="15dp"
            android:paddingBottom="1dp"
            android:text="@string/contact_form_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>